# interpolation-2d

./: .gitignore  CMakeLists.txt  General.cpp  General.h  Mesh.cpp  Mesh.h  Method.cpp  Method.h  Method_by_axes_x_y.cpp  Method_by_sides.cpp  Method_quazi_1d.cpp  Node.cpp  Node.h  SnapshotWriter.h  Triangle.cpp  Triangle.h  VTKSnapshotWriter.cpp  VTKSnapshotWriter.h  gen_str_mesh.cpp  interpolation_2or.cpp  main.cpp  res.txt  untitled_0.00625.msh  untitled_0.00625.smsh  untitled_0.01.msh  untitled_0.01.smsh  untitled_0.0125.msh  untitled_0.0125.smsh  untitled_0.025.msh  untitled_0.025.smsh  untitled_0.05.msh  untitled_0.05.smsh  untitled_0.1.smsh  untitled_0.125.msh  untitled_0.25.msh  untitled_0.5.msh  untitled_1.0.msh
